  manage :class:`~oyProjectManager.core.models.Project` clients.

* Added a new attribute :attr:`~oyProjectManager.core.models.Project.client` to
  the :class:`~oyProjectManager.core.models.Project` class to manage
  :class:`~oyProjectManager.core.models.Client`\ s.

* Updated ``version_creator`` UI, it now shows the Shots in correct numerical
  order.

0.2.3
-----

* Added two new fields to :class:`~oyProjectManager.core.models.Shot` to hold
  the handle information.

* Added a new method to ``NukeEnv`` to create slate information.

* Replacing references in ``MayaEnv`` now uses the repository environment
  variable and prevents reloading of the referenced versions upon saving.

* Fixed :attr:`~oyProjectManager.core.models.Shot.duration` attribute
  initialization in :class:`~oyProjectManager.core.models.Shot`.

* Now in ``version_creator`` the shot frame range and handle information can be
  updated.

* Fixed tests of ``version_creator``, the popups were interrupting the test
  while the environment to UI relation was tested. Now the dialog boxes only
  appear if the system is not in debug mode.

* Added thumbnail support and ``version_creator`` UI can load/upload the
  defined thumbnails.

* For a quick fix the template format has been changed in
  :meth:`~oyProjectManager.core.models.Sequence.add_shots`\ . Compressing shots
  by using a "-" is not supported anymore. This will probably updated later on.

* Changed the name formatting of
  :class:`~oyProjectManager.core.models.Shot`,
  :class:`~oyProjectManager.core.models.Asset` and
  :class:`~oyProjectManager.core.models.Version`\ . It is now allowed to have
  numbers at the beginning of the string.

* Fixed :class:`~oyProjectManager.environments.mayaEnv.Maya`\ , it was raising
  IntegrityErrors when there are more than one references to the same
  :class:`~oyProjectManage.core.models.Version`\ .

* Fixed a bug in ``version_creator`` where setting the font color was not