@@ -3,3 +3,11 @@
 # 
 # This module is part of oyProjectManager and is released under the BSD 2
 # License: http://www.opensource.org/licenses/BSD-2-Clause
+
+# TODO: Create a unified UI for:
+#       - version_creator
+#       - project_manager
+#       - status_manager
+#
+# by adding the project_manager and status_manager to the version_creator and
+# call the new UI asset_manager :)
