@@ -2,7 +2,7 @@
 
 # Form implementation generated from reading ui file '/home/eoyilmaz/Documents/development/oyProjectManager/oyProjectManager/ui/version_creator.ui'
 #
-# Created: Wed May 23 22:38:04 2012
+# Created: Tue Jun  5 12:49:53 2012
 #      by: PyQt4 UI code generator 4.9.1
 #
 # WARNING! All changes made in this file will be lost!
@@ -407,6 +407,7 @@ class Ui_Dialog(object):
         self.asset_info_groupBox.setTitle(QtGui.QApplication.translate("Dialog", "Asset Information", None, QtGui.QApplication.UnicodeUTF8))
         self.asset_name_label.setText(QtGui.QApplication.translate("Dialog", "Name", None, QtGui.QApplication.UnicodeUTF8))
         self.create_asset_pushButton.setText(QtGui.QApplication.translate("Dialog", "Create New Asset", None, QtGui.QApplication.UnicodeUTF8))
+        self.assets_tableWidget.setToolTip(QtGui.QApplication.translate("Dialog", "<html><head/><body><p>Right click to <span style=\" font-weight:600;\">RENAME ASSET</span></p></body></html>", None, QtGui.QApplication.UnicodeUTF8))
         item = self.assets_tableWidget.horizontalHeaderItem(0)
         item.setText(QtGui.QApplication.translate("Dialog", "Type", None, QtGui.QApplication.UnicodeUTF8))
         item = self.assets_tableWidget.horizontalHeaderItem(1)
@@ -439,6 +440,7 @@ class Ui_Dialog(object):
         self.previous_versions_groupBox.setTitle(QtGui.QApplication.translate("Dialog", "Previous Versions", None, QtGui.QApplication.UnicodeUTF8))
         self.show_published_only_checkBox.setText(QtGui.QApplication.translate("Dialog", "Show Published Only", None, QtGui.QApplication.UnicodeUTF8))
         self.show_only_label.setText(QtGui.QApplication.translate("Dialog", "Show Only", None, QtGui.QApplication.UnicodeUTF8))
+        self.previous_versions_tableWidget.setToolTip(QtGui.QApplication.translate("Dialog", "<html><head/><body><p>Right click to <span style=\" font-weight:600;\">PUBLISH</span> or <span style=\" font-weight:600;\">CHANGE STATUS</span></p><p>or</p><p>Double click to <span style=\" font-weight:600;\">OPEN</span></p></body></html>", None, QtGui.QApplication.UnicodeUTF8))
         item = self.previous_versions_tableWidget.horizontalHeaderItem(0)
         item.setText(QtGui.QApplication.translate("Dialog", "Version", None, QtGui.QApplication.UnicodeUTF8))
         item = self.previous_versions_tableWidget.horizontalHeaderItem(1)
