@@ -30,6 +30,14 @@ Version History
 * Updated ``version_creator`` UI, it now shows the Shots in correct numerical
   order.
 
+* Updated ``version_creator`` UI, it is now possible to change the Publish
+  state and the Status of a Version by right clicking on the Previous Versions
+  TableWidget.
+
+* :attr:`~oyProjectManager.core.models.Version.status` is now comparable with
+  long status names, so comparaing "WTS" with "Waiting To Start" will return
+  True
+
 0.2.3
 -----
 
